@@ -59,13 +59,21 @@ TEXTDOMAIN="rc-scripts"
 # Ensure that _ebuffer is emtpy
 _ebuffer=
 
+# bool has_addon(addon)
+#
+#   See if addon exists.
+#
+has_addon() {
+	[[ -e ${svclib}/addons/$1 ]]
+}
+
 # void import_addon(char *addon)
 #
 #  Import code from the specified addon if it exists
 #
 import_addon() {
 	local addon="${svclib}/addons/$1"
-	if [[ -r ${addon} ]] ; then
+	if has_addon $1 ; then
 		source "${addon}"
 		return 0
 	fi
