@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  13 Sep 2006; Mike Frysinger <vapier@gentoo.org>:
+
+    Check for the udev/devfs addons rather than binaries #147221.
+
   12 Sep 2006; Roy Marples <uberlord@gentoo.org>:
 
     FreeBSD is now fully supported for booting.
